--- a/awantura_o_kase/panel_admin/static/admin_panel_style.css
+++ b/awantura_o_kase/panel_admin/static/admin_panel_style.css
@@ -81,6 +81,7 @@ section .main-container
 
 input[type="text"].kasa,
 div#popup-modal-kara span,
+div#popup-modal-1-na-1 span,
 .awantura-font
 { /* Move text down by 2px; adjust as necessary */
   /*color: purple!important;*/
