--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -338,8 +338,8 @@
 	</div> 
 
 	<div id="popup-modal-1-na-1" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
-		<div class="relative p-4 w-full max-w-md max-h-full">
-			<div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+		<div class="relative p-4 w-full max-w-xl max-h-full">
+			<div class="relative rounded-lg shadow bg-gray-700">
 				<button type="button" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="popup-modal-1-na-1">
 					<svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
 						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
@@ -347,17 +347,45 @@
 					<span class="sr-only">Close modal</span>
 				</button>
 				<div class="p-4 md:p-5 text-center">
-					<svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
-					</svg>
-					<h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Popup do 1 na 1! Jeszcze nie wiem co tu powinno byc, ale popup jest!</h3>
-					<form method = "post" action = "{% url 'gra' %}">{% csrf_token %}
-						<button type = "submit" name = "1-na-1" value = "1-na-1" data-modal-hide="popup-modal-1-na-1" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
-							Aha, spoko
+					<h3 class="mb-5 text-lg font-normal text-gray-300">1 na 1 - wybierz 2 druzyny</h3>
+					
+						<form method="post" action="{% url 'gra' %}" class="flex w-full flex-col gap-5 items-center">
+							<div class="flex w-full gap-5">
+						{% csrf_token %}
+						
+						<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+							<input type="checkbox" name="1na1-druzyna" id="1na1-niebiescy" value="niebiescy" class="sr-only peer jeden-check">
+							<div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(8,26,77)] rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(8,35,112)] button">
+								<span class="!absolute !top-0 !left-0 !right-0 m-auto text-xs text-center text-gray-500 pt-1">niebiescy</span>
+								<span class="pt-5 m-auto">{{pula_niebiescy}}</span>
+							</div>
+						</label>
+						<label class="inline-flex cursor-pointer basis-0 grow-[5] rounded">
+							<input type="checkbox" name="1na1-druzyna" id="1na1-zieloni" value="zieloni" class="sr-only peer jeden-check">
+							<div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(3,44,29)] rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(2,65,43)] button">
+								<span class="!absolute !top-0 !left-0 !right-0 m-auto text-xs text-center text-gray-500 pt-1">zieloni</span>
+								<span class="pt-5 m-auto">{{pula_zieloni}}</span>
+							</div>
+						</label>
+						<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+							<input type="checkbox" name="1na1-druzyna" id="1na1-zolci" value="zolci" class="sr-only peer jeden-check">
+							<div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-yellow-800 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-yellow-500 button">
+								<span class="!absolute !top-0 !left-0 !right-0 m-auto text-xs text-center text-gray-500 pt-1">zolci</span>
+								<span class="pt-5 m-auto">{{pula_zolci}}</span>
+							</div>
+						</label>
+						<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+							<input type="checkbox" name="1na1-druzyna" id="1na1-mistrzowie" value="mistrzowie" class="sr-only peer jeden-check">
+							<div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(38,13,39)] rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(54,41,66)] button">
+								<span class="!absolute !top-0 !left-0 !right-0 m-auto text-xs text-center text-gray-500 pt-1">mistrzowie</span>
+								<span class="pt-5 m-auto">{{pula_mistrzowie}}</span>
+							</div>
+						</label>
+						</div>
+						<button type="submit" name="kara" value="kara" data-modal-hide="popup-modal-1-na-1" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+							DALEJ
 						</button>
-						<button data-modal-hide="popup-modal-1-na-1" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
-							No ok, luzik
-						</button>
+					
 					</form>
 				</div>
 			</div>
@@ -448,6 +476,9 @@
 						</div>
 					</div>
 				</div>
+			{% elif message.message == "1na1 - etap 2" %}
+				<div></div>
+
 			{% else %}
 				
 				<div data-modal-target="bottom-right-modal" id="bottom-right-modal" data-modal-placement="bottom-right" tabindex="-1" class="fixed top-0 left-0 right-0 bottom-0 z-50 w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full justify-center items-center flex" aria-modal="true" role="dialog">
@@ -507,6 +538,21 @@
 				}
 			{% endif %}
 		});
+
+		//funkcja dla 1 na 1 - max 2 druzyny 
+		document.addEventListener("DOMContentLoaded", function() {
+			var checks = document.getElementsByClassName("jeden-check");
+			var max = 2;
+			for (var i = 0; i < checks.length; i++) {
+				checks[i].onclick = selectiveCheck;
+			}
+			function selectiveCheck (event) {
+				var checkedChecks = document.querySelectorAll(".jeden-check:checked");
+				if (checkedChecks.length >= max + 1) {
+					return false;
+				}
+			}
+		})
 	</script>
 </body>
 
