--- a/awantura_o_kase/panel_admin/static/tailwind-output.css
+++ b/awantura_o_kase/panel_admin/static/tailwind-output.css
@@ -2263,6 +2263,7 @@ section .main-container
 input[type="text"].kasa,
 div#popup-modal-kara span,
 div#popup-modal-1-na-1 span,
+div#popup-modal-podpowiedz span,
 .awantura-font
 {
   /* Move text down by 2px; adjust as necessary */
