--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -385,7 +385,7 @@
 							</div>
 						</label>
 						</div>
-						<button type="submit" name="kara" value="kara" data-modal-hide="popup-modal-1-na-1" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+						<button type="submit" name="1-na-1" value="1-na-1" data-modal-hide="popup-modal-1-na-1" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
 							DALEJ
 						</button>
 					
