--- a/awantura_o_kase/panel_admin/static/tailwind-output.css
+++ b/awantura_o_kase/panel_admin/static/tailwind-output.css
@@ -1167,6 +1167,14 @@ input:checked + .toggle-bg {
   top: 5px;
 }
 
+.top-\[\] {
+  top: ;
+}
+
+.top-\[10px\] {
+  top: 10px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -1394,6 +1402,10 @@ input:checked + .toggle-bg {
   width: 100%;
 }
 
+.w-3\/4 {
+  width: 75%;
+}
+
 .min-w-0 {
   min-width: 0px;
 }
@@ -1566,6 +1578,10 @@ input:checked + .toggle-bg {
 
 .gap-\[10\%\] {
   gap: 10%;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1915,6 +1931,11 @@ input:checked + .toggle-bg {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .pl-5 {
@@ -2706,6 +2727,14 @@ section .main-container .content h1
   background-color: rgb(114 59 19 / var(--tw-bg-opacity));
 }
 
+.peer:checked ~ .peer-checked\:bg-neutral-800\/75 {
+  background-color: rgb(38 38 38 / 0.75);
+}
+
+.peer:checked ~ .peer-checked\:bg-neutral-600\/75 {
+  background-color: rgb(82 82 82 / 0.75);
+}
+
 .peer:checked ~ .peer-checked\:text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -2717,9 +2746,20 @@ section .main-container .content h1
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.peer:checked ~ .peer-checked\:ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
 .peer:checked ~ .peer-checked\:ring-gray-300 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
+}
+
+.peer:checked ~ .peer-checked\:ring-neutral-300 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(212 212 212 / var(--tw-ring-opacity));
 }
 
 .peer:checked ~ .peer-checked\:after\:translate-x-full::after {
