--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -388,7 +388,6 @@
 						<button type="submit" name="1-na-1" value="1-na-1" data-modal-hide="popup-modal-1-na-1" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
 							DALEJ
 						</button>
-					
 					</form>
 				</div>
 			</div>
@@ -479,8 +478,75 @@
 						</div>
 					</div>
 				</div>
-			{% elif message.message == "1na1 - etap 2" %}
-				<div></div>
+			{% elif message.message == "1 na 1 - etap 2" %}
+			<div id="popup-modal-1-na-1-etap-2" tabindex="-1" class="flex overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+				<div modal-backdrop="popup-modal-1-na-1-etap-2" class="bg-gray-900/50 dark:bg-gray-900/80 fixed inset-0"></div>
+				<div class="relative p-4 w-full max-w-xl max-h-full">
+					<div class="relative rounded-lg shadow bg-gray-700">
+						<button type="button" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="popup-modal-1-na-1-etap-2">
+							<svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+								<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+							</svg>
+							<span class="sr-only">Close modal</span>
+						</button>
+						<div class="p-4 md:p-5 text-center">
+							<h3 class="mb-5 text-lg font-normal text-gray-300">1 na 1 - ETAP 2! wybierz 6 kategorii</h3>
+							
+								<form method="post" action="{% url 'gra' %}" class="flex w-full flex-col gap-5 items-center">
+									<div class="flex w-3/4 gap-3 flex-col">
+								{% csrf_token %}
+								
+								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-1" value="losowa kategoria #1" class="sr-only peer jeden-check-kategorie">
+									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
+										<span class="relative top-[5px] awantura-font">losowa kategoria #1</span>	
+									</div>
+								</label>
+								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-2" value="losowa kategoria #2" class="sr-only peer jeden-check-kategorie">
+									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
+										<span class="relative top-[5px] awantura-font">losowa kategoria #2</span>	
+									</div>
+								</label>
+								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-3" value="losowa kategoria #3" class="sr-only peer jeden-check-kategorie">
+									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
+										<span class="relative top-[5px] awantura-font">losowa kategoria #3</span>	
+									</div>
+								</label>
+								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-4" value="losowa kategoria #4" class="sr-only peer jeden-check-kategorie">
+									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
+										<span class="relative top-[5px] awantura-font">losowa kategoria #4</span>	
+									</div>
+								</label>
+								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-5" value="losowa kategoria #5" class="sr-only peer jeden-check-kategorie">
+									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
+										<span class="relative top-[5px] awantura-font">losowa kategoria #5</span>	
+									</div>
+								</label>
+								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-6" value="losowa kategoria #6" class="sr-only peer jeden-check-kategorie">
+									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
+										<span class="relative top-[5px] awantura-font">losowa kategoria #6</span>	
+									</div>
+								</label>
+								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-7" value="losowa kategoria #7" class="sr-only peer jeden-check-kategorie">
+									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
+										<span class="relative top-[5px] awantura-font">losowa kategoria #7</span>
+									</div>
+								</label>
+								</div>
+								<button type="submit" name="1-na-1-etap-2" value="1-na-1-etap-2" data-modal-hide="popup-modal-1-na-1-etap-2" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+									DALEJ
+								</button>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div> 
 
 			{% else %}
 				
@@ -551,6 +617,21 @@
 			}
 			function selectiveCheck (event) {
 				var checkedChecks = document.querySelectorAll(".jeden-check:checked");
+				if (checkedChecks.length >= max + 1) {
+					return false;
+				}
+			}
+		})
+
+		//funkcja dla 1 na 1 - max 6 pytan 
+		document.addEventListener("DOMContentLoaded", function() {
+			var checks = document.getElementsByClassName("jeden-check-kategorie");
+			var max = 6;
+			for (var i = 0; i < checks.length; i++) {
+				checks[i].onclick = selectiveCheck;
+			}
+			function selectiveCheck (event) {
+				var checkedChecks = document.querySelectorAll(".jeden-check-kategorie:checked");
 				if (checkedChecks.length >= max + 1) {
 					return false;
 				}
