Dodanie podpowiedzi do panelu admina

--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -195,7 +195,7 @@
 					</div>
 					<div class="relative flex-1 px-3 overflow-auto">
 						<span class="!absolute !top-1 !left-0 !right-0 m-auto text-xs awantura-font text-center text-gray-500">Podpowiedzi</span>
-						<span class="!top-5 relative">TRESC PODPOWIEDZI podmień to pls :3 hihi</span>
+						<span class="!top-5 relative">{{podpowiedz}}</span>
 					</div>
 					
 				</div>
