--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -497,45 +497,45 @@
 								{% csrf_token %}
 								
 								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-1" value="losowa kategoria #1" class="sr-only peer jeden-check-kategorie">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-1" value="kategoria-1" class="sr-only peer jeden-check-kategorie">
 									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">losowa kategoria #1</span>	
+										<span class="relative top-[5px] awantura-font">kategoria-1</span>	
 									</div>
 								</label>
 								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-2" value="losowa kategoria #2" class="sr-only peer jeden-check-kategorie">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-2" value="kategoria-2" class="sr-only peer jeden-check-kategorie">
 									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">losowa kategoria #2</span>	
+										<span class="relative top-[5px] awantura-font">kategoria-2</span>	
 									</div>
 								</label>
 								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-3" value="losowa kategoria #3" class="sr-only peer jeden-check-kategorie">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-3" value="kategoria-3" class="sr-only peer jeden-check-kategorie">
 									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">losowa kategoria #3</span>	
+										<span class="relative top-[5px] awantura-font">kategoria-3</span>	
 									</div>
 								</label>
 								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-4" value="losowa kategoria #4" class="sr-only peer jeden-check-kategorie">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-4" value="kategoria-4" class="sr-only peer jeden-check-kategorie">
 									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">losowa kategoria #4</span>	
+										<span class="relative top-[5px] awantura-font">kategoria-4</span>	
 									</div>
 								</label>
 								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-5" value="losowa kategoria #5" class="sr-only peer jeden-check-kategorie">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-5" value="kategoria-5" class="sr-only peer jeden-check-kategorie">
 									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">losowa kategoria #5</span>	
+										<span class="relative top-[5px] awantura-font">kategoria-5</span>	
 									</div>
 								</label>
 								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-6" value="losowa kategoria #6" class="sr-only peer jeden-check-kategorie">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-6" value="kategoria-6" class="sr-only peer jeden-check-kategorie">
 									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">losowa kategoria #6</span>	
+										<span class="relative top-[5px] awantura-font">kategoria-6</span>	
 									</div>
 								</label>
 								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-7" value="losowa kategoria #7" class="sr-only peer jeden-check-kategorie">
+									<input type="checkbox" name="1na1-kategoria" id="1na1-kategoria-7" value="kategoria-7" class="sr-only peer jeden-check-kategorie">
 									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">losowa kategoria #7</span>
+										<span class="relative top-[5px] awantura-font">kategoria-7</span>
 									</div>
 								</label>
 								</div>
