--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -496,48 +496,18 @@
 									<div class="flex w-3/4 gap-3 flex-col">
 								{% csrf_token %}
 								
-								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="{{kategorie_1_na_1.0}}" value="{{kategorie_1_na_1.0}}" class="sr-only peer jeden-check-kategorie">
-									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">{{kategorie_1_na_1.0}}</span>	
-									</div>
-								</label>
-								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="{{kategorie_1_na_1.1}}" value="{{kategorie_1_na_1.1}}" class="sr-only peer jeden-check-kategorie">
-									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">{{kategorie_1_na_1.1}}</span>	
-									</div>
-								</label>
-								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="{{kategorie_1_na_1.2}}" value="{{kategorie_1_na_1.2}}" class="sr-only peer jeden-check-kategorie">
-									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">{{kategorie_1_na_1.2}}</span>	
-									</div>
-								</label>
-								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="{{kategorie_1_na_1.3}}" value="{{kategorie_1_na_1.3}}" class="sr-only peer jeden-check-kategorie">
-									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">{{kategorie_1_na_1.3}}</span>	
-									</div>
-								</label>
-								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="{{kategorie_1_na_1.4}}" value="{{kategorie_1_na_1.4}}" class="sr-only peer jeden-check-kategorie">
-									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">kategoria-5</span>	
-									</div>
-								</label>
-								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="{{kategorie_1_na_1.5}}" value="{{kategorie_1_na_1.5}}" class="sr-only peer jeden-check-kategorie">
-									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">{{kategorie_1_na_1.5}}</span>	
-									</div>
-								</label>
-								<label class="inline-flex cursor-pointer basis-0 grow-[5]">
-									<input type="checkbox" name="1na1-kategoria" id="{{kategorie_1_na_1.6}}" value="{{kategorie_1_na_1.6}}" class="sr-only peer jeden-check-kategorie">
-									<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
-										<span class="relative top-[5px] awantura-font">{{kategorie_1_na_1.6}}</span>
-									</div>
-								</label>
+								{% for outer_key, outer_value in kategorie_1_na_1.items %}
+										{% for inner_key, inner_value in outer_value.items %}
+												<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+													<input type="checkbox" {{inner_value}} name="1na1-kategoria" id="{{outer_key}}" value="{{outer_key}}" class="sr-only peer jeden-check-kategorie"
+													{% if inner_value %} checked {% endif %} >
+													<div class="py-2 pl-5 peer peer-focus:outline-none peer-checked:ring-2 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-neutral-600/75 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-neutral-800/75 button">
+														<span class="relative top-[5px] awantura-font">{{inner_key}}</span>	
+													</div>
+												</label>
+										{% endfor %}
+								{% endfor %}
+
 								</div>
 								<button type="submit" name="1-na-1-etap-2" value="1-na-1-etap-2" data-modal-hide="popup-modal-1-na-1-etap-2" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
 									USUŃ
