--- a/awantura_o_kase/panel_admin/templates/stream_panel.html
+++ b/awantura_o_kase/panel_admin/templates/stream_panel.html
@@ -6,14 +6,18 @@
     <title>Przykładowa strona z przyciskami</title>
 </head>
 <body>
-    <h3>Current overlay: '{{stream_json.stream}}'</h5>
-    <h3>Wlaczony czas: '{{stream_json.czas}}'</h5>
+    <h3>Current overlay: '{{stream}}'</h5>
+    <h3>Wlaczony czas: '{{czas}}'</h5>
     
     <h1>Wybierz opcję</h1>
-    <form method = "post" action = "{% url 'stream_panel' %}">{% csrf_token %}   
+    <form method = "post" action = "{% url 'stream_panel' %}">{% csrf_token %}
+        <button type = "submit" name = "czas" value="czas">Toggle czas (true/false)</button>
+        <br/><br/>
+        <button type = "submit" name = "wylaczony" value = "wylaczony">Wyłączony</button>
+        <button type = "submit" name = "stany-kont" value = "stany-kont">Stany kont</button>
         <button type = "submit" name = "licytacja" value = "licytacja">Licytacja</button>
         <button type = "submit" name = "cosinnego" value = "cosinnego">cos innego XD</button>
-        <button type = "submit" name = "czas" value="czas">czasssss</button>
+
     </form>
 </body>
 </html>
