Dodanie reagowania overlay na ustawienia w stream panelu

--- a/awantura_o_kase/panel_admin/templates/stream_panel.html
+++ b/awantura_o_kase/panel_admin/templates/stream_panel.html
@@ -6,7 +6,7 @@
     <title>Przykładowa strona z przyciskami</title>
 </head>
 <body>
-    <h3>Current overlay: '{{stream}}'</h5>
+    <h3>Current overlay: '{{overlay}}'</h5>
     <h3>Wlaczony czas: '{{czas}}'</h5>
     
     <h1>Wybierz opcję</h1>
