--- a/stream_overlay/src/css/_variables.css
+++ b/stream_overlay/src/css/_variables.css
@@ -14,5 +14,6 @@
   --pula-ciemny: theme(colors.neutral.800);
   --pasek-ciemny: theme(colors.neutral.900);
 
-  --awantura-font: 'LCDDot'
+  --awantura-font: 'LCDDot';
+  --eurostile-font: 'Eurostile';
 }
