Dodanie overlay Licytacja i poprawa zaleznosci zmiennej "czyGraMistrzowie"

--- a/stream_overlay/src/css/App.css
+++ b/stream_overlay/src/css/App.css
@@ -1,5 +1,5 @@
 @import "./OverlaySetter.css";
-@import "./StanyKont.css";
+@import "./StanyKont_Licytacja.css";
 @import "./_variables.css";
 
 html,
