--- a/awantura_o_kase/panel_admin/templates/stream_panel.html
+++ b/awantura_o_kase/panel_admin/templates/stream_panel.html
@@ -16,7 +16,7 @@
         <button type = "submit" name = "wylaczony" value = "wylaczony">Wyłączony</button>
         <button type = "submit" name = "stany-kont" value = "stany-kont">Stany kont</button>
         <button type = "submit" name = "licytacja" value = "licytacja">Licytacja</button>
-        <button type = "submit" name = "cosinnego" value = "cosinnego">cos innego XD</button>
+        <button type = "submit" name = "kupowanie-podpowiedzi" value = "kupowanie-podpowiedzi">Kupowanie podpowiedzi</button>
 
     </form>
 </body>
