--- a/stream_overlay/src/css/StanyKont_Licytacja.css
+++ b/stream_overlay/src/css/StanyKont_Licytacja.css
@@ -1,6 +1,8 @@
 @import "./_variables.css";
 
-.StanyKont, .Licytacja {
+.StanyKont,
+.Licytacja,
+.KupowaniePodpowiedzi {
   height: 14%;
   width: 100%;
   display: flex;
@@ -10,28 +12,32 @@
 .StanyKont .niebiescy-pula {
   background-color: var(--niebieski-jasny);
 }
-.Licytacja .niebiescy-pula {
+.Licytacja .niebiescy-pula,
+.KupowaniePodpowiedzi .niebiescy-pula {
   background-color: var(--niebieski-ciemny);
 }
 
 .StanyKont .zieloni-pula {
   background-color: var(--zielony-jasny);
 }
-.Licytacja .zieloni-pula {
+.Licytacja .zieloni-pula,
+.KupowaniePodpowiedzi .zieloni-pula {
   background-color: var(--zielony-ciemny);
 }
 
 .StanyKont .zolci-pula {
   background-color: var(--zolty-jasny);
 }
-.Licytacja .zolci-pula {
+.Licytacja .zolci-pula,
+.KupowaniePodpowiedzi .zolci-pula {
   background-color: var(--zolty-ciemny);
 }
 
 .StanyKont .mistrzowie-pula {
   background-color: var(--mistrzowie-jasny);
 }
-.Licytacja .mistrzowie-pula {
+.Licytacja .mistrzowie-pula,
+.KupowaniePodpowiedzi .mistrzowie-pula {
   background-color: var(--mistrzowie-ciemny);
 }
 
@@ -39,29 +45,11 @@
   background-color: var(--pula-ciemny);
 }
 
-.StanyKont .niebiescy, .Licytacja .niebiescy,
-.StanyKont .zieloni, .Licytacja .zieloni,
-.StanyKont .zolci, .Licytacja .zolci,
-.StanyKont .mistrzowie, .Licytacja .mistrzowie{
-  width: 24%;
-}
-
-.StanyKont .ogolna,
-.Licytacja .space-waster {
+.space-waster {
   width: 28%;
 }
 
-.StanyKont .niebiescy, .Licytacja .niebiescy,
-.StanyKont .zieloni, .Licytacja .zieloni,
-.StanyKont .zolci, .Licytacja .zolci,
-.StanyKont .mistrzowie, .Licytacja .mistrzowie,
-.StanyKont .ogolna {
-  display: flex;
-  flex-direction: column;
-}
-
-.StanyKont .opis,
-.Licytacja .opis{
+.opis {
   background-color: var(--pasek-ciemny);
   height: 25px;
   display: flex;
@@ -73,28 +61,15 @@
 }
 
 .Licytacja .opis {
-  
   letter-spacing: 8px;
 }
 
-.StanyKont .niebiescy-pula, .Licytacja .niebiescy-pula,
-.StanyKont .zieloni-pula, .Licytacja .zieloni-pula,
-.StanyKont .zolci-pula, .Licytacja .zolci-pula,
-.StanyKont .mistrzowie-pula, .Licytacja .mistrzowie-pula,
-.StanyKont .ogolna-pula {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  @apply text-5xl;
+.ogolna-pula .opis {
+  letter-spacing: 4px;
 }
 
 
-.StanyKont .niebiescy-pula p, .Licytacja .niebiescy-pula p,
-.StanyKont .zieloni-pula p, .Licytacja .zieloni-pula p,
-.StanyKont .zolci-pula p, .Licytacja .zolci-pula p,
-.StanyKont .mistrzowie-pula p, .Licytacja .mistrzowie-pula p,
-.StanyKont .ogolna-pula p{
+.awantura-font p {
   position: relative;
   top: 5px;
   left: 3px;
