Dodanie frontendu do overlay "WykupienieZawodnika"

--- a/awantura_o_kase/panel_admin/templates/stream_panel.html
+++ b/awantura_o_kase/panel_admin/templates/stream_panel.html
@@ -17,6 +17,7 @@
         <button type = "submit" name = "stany-kont" value = "stany-kont">Stany kont</button>
         <button type = "submit" name = "licytacja" value = "licytacja">Licytacja</button>
         <button type = "submit" name = "kupowanie-podpowiedzi" value = "kupowanie-podpowiedzi">Kupowanie podpowiedzi</button>
+        <button type = "submit" name = "wykupienie-zawodnika" value = "wykupienie-zawodnika">Wykupienie zawodnika</button>
 
     </form>
 </body>
