Dodanie wykupienia zawodnika do panelu admina

--- a/awantura_o_kase/panel_admin/static/admin_panel_style.css
+++ b/awantura_o_kase/panel_admin/static/admin_panel_style.css
@@ -83,6 +83,7 @@ input[type="text"].kasa,
 div#popup-modal-kara span,
 div#popup-modal-1-na-1 span,
 div#popup-modal-podpowiedz span,
+div#popup-modal-wykup-zawodnika span,
 .awantura-font
 { /* Move text down by 2px; adjust as necessary */
   /*color: purple!important;*/
