--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -222,6 +222,7 @@
 			<div class="action-container flex flex-row w-full min-h-[10%] gap-[10%] justify-center">
 				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black rounded-full uppercase font-bold" data-modal-target="popup-modal-kara" data-modal-toggle="popup-modal-kara">Kara</button>
 				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black rounded-full uppercase font-bold" data-modal-target="popup-modal-1-na-1" data-modal-toggle="popup-modal-1-na-1">1 na 1</button>
+				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black rounded-full uppercase font-bold" data-modal-target="popup-modal-wykup-zawodnika" data-modal-toggle="popup-modal-wykup-zawodnika">Wykup zawodnika</button>
 				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black reset-gry rounded-full uppercase font-bold" data-modal-target="popup-modal-reset-rundy" data-modal-toggle="popup-modal-reset-rundy">Reset rundy</button>
 				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black reset-gry rounded-full uppercase font-bold" data-modal-target="popup-modal-reset-gry" data-modal-toggle="popup-modal-reset-gry">Reset gry(?)</button>
 			</div>
@@ -246,7 +247,7 @@
 							<input type="radio" name="podpowiedz-druzyna" id="podpowiedz-niebiescy" value="niebiescy" class="sr-only peer">
 							<div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(8,26,77)]             rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(8,35,112)] button">
 								<span class="!absolute !top-0 !left-0 !right-0 m-auto text-xs text-center text-gray-500 pt-1">niebiescy</span>
-								<span class="pt-5 m-auto">{{pula_niebiescy}}</span>
+								<span class="pt-5 m-auto awantura">{{pula_niebiescy}}</span>
 							</div>
 						</label>
 						<label class="inline-flex cursor-pointer basis-0 grow-[5]">
@@ -396,6 +397,82 @@
 			</div>
 		</div>
 	</div> 
+
+	<div id="popup-modal-wykup-zawodnika" tabindex="-1"
+		class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+		<div class="relative p-4 w-full max-w-xl max-h-full">
+			<div class="relative rounded-lg shadow bg-gray-700">
+				<button type="button"
+					class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+					data-modal-hide="popup-modal-wykup-zawodnika">
+					<svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+							d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+					</svg>
+					<span class="sr-only">Close modal</span>
+				</button>
+				<div class="p-4 md:p-5 text-center">
+					<h3 class="mb-5 text-lg font-normal text-gray-300">WYKUP ZAWODNIKA - wybierz drużynę i podaj kwotę</h3>
+
+					<form method="post" action="{% url 'gra' %}" class="flex w-full flex-col gap-5 items-center">
+						<div class="flex w-full gap-5">
+							{% csrf_token %}
+
+							<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+								<input type="radio" name="wykup-zawodnika-druzyna" id="wykup-zawodnika-niebiescy" value="niebiescy"
+									class="sr-only peer">
+								<div
+									class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(8,26,77)] rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(8,35,112)] button">
+									<span
+										class="!absolute !top-0 !left-0 !right-0 m-auto text-xs text-center text-gray-500 pt-1">niebiescy</span>
+									<span class="pt-5 m-auto">{{pula_niebiescy}}</span>
+								</div>
+							</label>
+							<label class="inline-flex cursor-pointer basis-0 grow-[5] rounded">
+								<input type="radio" name="wykup-zawodnika-druzyna" id="wykup-zawodnika-zieloni" value="zieloni"
+									class="sr-only peer">
+								<div
+									class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(3,44,29)] rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(2,65,43)] button">
+									<span
+										class="!absolute !top-0 !left-0 !right-0 m-auto text-xs text-center text-gray-500 pt-1">zieloni</span>
+									<span class="pt-5 m-auto">{{pula_zieloni}}</span>
+								</div>
+							</label>
+							<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+								<input type="radio" name="wykup-zawodnika-druzyna" id="wykup-zawodnika-zolci" value="zolci"
+									class="sr-only peer">
+								<div
+									class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-yellow-800 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-yellow-500 button">
+									<span
+										class="!absolute !top-0 !left-0 !right-0 m-auto text-xs text-center text-gray-500 pt-1">zolci</span>
+									<span class="pt-5 m-auto">{{pula_zolci}}</span>
+								</div>
+							</label>
+							<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+								<input type="radio" name="wykup-zawodnika-druzyna" id="wykup-zawodnika-mistrzowie" value="mistrzowie"
+									class="sr-only peer">
+								<div
+									class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(38,13,39)] rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(54,41,66)] button">
+									<span
+										class="!absolute !top-0 !left-0 !right-0 m-auto text-xs text-center text-gray-500 pt-1">mistrzowie</span>
+									<span class="pt-5 m-auto">{{pula_mistrzowie}}</span>
+								</div>
+							</label>
+
+						</div>
+						<div class="flex flex-col w-1/2 items-center gap-5">
+							<input type="number" name="wykup-zawodnika-amount" id="wykup-zawodnika-amount"
+								class="w-full max-w-md text-gray-500 awantura-font text-center text-3xl">
+							<button type="submit" name="wykup" value="wykup" data-modal-hide="popup-modal-wykup-zawodnika"
+								class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+								Wykup!
+							</button>
+						</div>
+				</div>
+				</form>
+			</div>
+		</div>
+	</div>
 	
 	<div id="popup-modal-reset-rundy" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
 		<div class="relative p-4 w-full max-w-md max-h-full">
