Dodanie widocznosci odpowiedzi podczas ostatniej czesci 1na1 w admin panelu

--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -608,10 +608,14 @@
               <div class="p-4 md:p-5 text-center">
                 <h3 class="mb-5 text-lg font-normal text-gray-300">1 na 1 - ETAP 3! Przeczytaj pytanie, wybierz kto odpowiadal</h3>
 
-                <div class="pytanie-odpowiedz w-full flex flex-row overflow-hidden bg-neutral-800/75 border-4 border-neutral-900 divide-x-4 divide-neutral-900 mb-5">
+                <div class="pytanie-odpowiedz w-full flex flex-row flex-col overflow-hidden bg-neutral-800/75 border-4 border-neutral-900 divide-x-4 divide-neutral-900 mb-5">
                   <div class="flex-[7] relative overflow-auto p-3 min-h-full text-lg">
                     <span class="!absolute !top-1 !left-0 !right-0 m-auto text-xs awantura-font text-center text-gray-500">Tresc pytania</span>
                     <span class="!top-2 relative">{{tresc_pytania}}</span>
+                  </div>
+									<div class="flex-[7] relative overflow-auto p-3 min-h-full text-lg">
+                    <span class="!absolute !top-1 !left-0 !right-0 m-auto text-xs awantura-font text-center text-gray-500">Tresc odpowiedzi</span>
+                    <span class="!top-2 relative">{{odpowiedz}}</span>
                   </div>
                 </div>
                 
